# pool-agent-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml  python-package.yml  test.yml
fastfiz_env/: __init__.py  make.py
fastfiz_env/envs/: __init__.py  fastfiz.py  pockets_fastfiz.py  utils.py
fastfiz_env/reward_functions/: __init__.py  binary_reward.py  combined_reward.py  default_reward.py  reward_function.py  winning_reward.py
fastfiz_env/reward_functions/common/: __init__.py  balls_not_moved_reward.py  constant_reward.py  cue_ball_not_moved_reward.py  cue_ball_pocketed_reward.py  delta_best_total_distance_reward.py  exponential_velocity_reward.py  game_won_reward.py  impossible_shot_reward.py  step_no_balls_pocketed_reward.py  step_pocketed_reward.py  total_distance_reward.py  velocity_reward.py  weights.py
fastfiz_env/utils/: __init__.py
fastfiz_env/utils/fastfiz/: __init__.py  fastfiz.py
fastfiz_env/wrappers/: __init__.py  action.py  utils.py
scripts/: evaluate.py  hyperparams.py  optimize.py  plot.py  random_policy.py  train.py
src/: config.json  eval.py  learn.py  main.py  optimize.py  plot.py  plot_benchmarks.py  random_policy.py  tes.ipynb  test.py  train.py
src/environment/: __init__.py  fastfizenv_v1.py  fastfizenv_v2.py  fastfizenv_v3.py
src/fastfiz_env/: __init__.py  make.py
src/fastfiz_env/envs/: BaseFastFiz.py  BaseRLFastFiz.py  PocketRLFastFiz.py  __init__.py  action_fastfiz.py  base_fastfiz.py  base_rl_fastfiz.py  basic_rl_fastfiz.py  event_fastfiz.py  frames_fastfiz.py  image_fastfiz.py  pocket_rl_fastfiz.py  pockets_fastfiz.py  replay_fastfiz.py  sequence_fastfiz.py  simple_fastfiz.py  testing_fastfiz.py  utils.py  velocity_fastfiz.py
src/fastfiz_env/reward_functions/: binary_reward.py  combined_reward.py  default_reward.py  reward_function.py  winning_reward.py
src/fastfiz_env/reward_functions/common/: __init__.py  constant_reward.py  cue_ball_not_moved_reward.py  weights.py  (+7 more)
src/fastfiz_env/utils/: __init__.py  env.py  fastfiz.py  model_manager.py  ppo_manager.py
src/fastfiz_env/wrappers/: __init__.py  action.py  max_episode_steps.py  time_limit_injection.py  utils.py
src/tests/: test_envs.py  test_reward_functions.py  test_utils.py
src/tests/envs/: test_envs.py
src/tests/utils/: test_features.py  test_reward_functions.py  test_wrappers.py
src/utils/: __init__.py
tests/envs/: test_envs.py
tests/utils/: test_fastfiz.py  test_reward_functions.py  test_wrappers.py
(+28 files in other folders)
